--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
     <header class="gblog-post__header">
       {{ $source := ($.Resources.ByType "image").GetMatch "{*feature*,*cover*,*thumbnail*}" }}
       {{ with $source }}
-        <div class="gblog-post__feature">
+        <!-- <div class="gblog-post__feature">
           <picture>
             {{ $featured := .Fill (printf "910x280 %s" (default "Smart" .Params.anchor)) }}
             <source srcset="{{ $featured.Permalink }}" />
@@ -15,7 +15,7 @@
           {{ with $source.Params.credits }}
             <span>Credits: {{ . | $.Page.RenderString | safeHTML }}</span>
           {{ end }}
-        </div>
+        </div> -->
       {{ end }}
 
 
