--- a/static/custom.css
+++ b/static/custom.css
@@ -4,14 +4,37 @@
     --code-max-height: 60rem;
   }
   
-  .gblog-markdown pre, .gblog-markdown code {
-    background-color: #002b36;
+  
+  /* Light mode theming */
+
+  /* :root[color-theme=light] .gblog-markdown pre, .gblog-markdown code {
+    background-color: #fdf6e3;
     border-radius: 0.15rem;
     color: 	#839496;
     font-size: .875rem;
     line-height: 1rem;
   }
-  /* Light mode theming */
+
+  :root .chroma .k, :root[color-theme=light] .chroma .k {
+    color: 	#839496;
+    font-weight: normal;
+  }
+  :root .chroma .n, :root[color-theme=light] .chroma .n {
+    color: #268bd2;
+  }
+
+  :root .chroma .err, :root[color-theme=light] .chroma .err {
+    color: #a61717;
+    background-color: transparent;
+  }
+
+  :root[color-theme=light] .chroma .nt {
+    color: #268bd2;
+  }
+  :root[color-theme=light] .chroma .kc {
+    color: #d33682;
+  } */
+
   :root,
   :root[color-theme="light"] {
     --header-background: #16537e;
@@ -28,10 +51,10 @@
     --link-color: #16537e;
     --link-color-visited: #9ebccf;
   
-    --code-background: #f5f6f8;
+    --code-background: #fdf6e3;
     --code-accent-color: #e3e7eb;
     --code-accent-color-lite: #eff1f3;
-    --code-font-color: #5f5f5f;
+    --code-font-color: 	#657b83;
   
     --code-copy-background: #f8f9fa;
     --code-copy-font-color: #6b7784;
@@ -91,6 +114,14 @@
   
   /* Dark mode theming */
 
+  /* :root[color-theme=dark] .gblog-markdown pre, .gblog-markdown code {
+    background-color: #002b36;
+    border-radius: 0.15rem;
+    color: 	#839496;
+    font-size: .875rem;
+    line-height: 1rem;
+  }
+
   :root[color-theme=dark] .chroma .err {
     background-color: transparent;
   }
@@ -100,7 +131,7 @@
   }
   :root[color-theme=dark] .chroma .kc {
     color: #d33682;
-  }
+  } */
   :root[color-theme="dark"] {
     --header-background: #16537e;
     --header-font-color: #ffffff;
