--- a/static/custom.css
+++ b/static/custom.css
@@ -23,7 +23,7 @@
     --link-color: #16537e;
     --link-color-visited: #9ebccf;
   
-    --code-background: #fdf6e3;
+    /* --code-background: #fdf6e3;
     --code-accent-color: 	#b58900;
     --code-accent-color-lite: #cb4b16;
     --code-font-color: 	#657b83;
@@ -31,7 +31,7 @@
     --code-copy-background: #f8f9fa;
     --code-copy-font-color: #6b7784;
     --code-copy-border-color: #adb4bc;
-    --code-copy-success-color: #fffdf7;
+    --code-copy-success-color: #fffdf7; */
   
     --accent-color-dark: #868e96;
     --accent-color: #e9ecef;
@@ -61,7 +61,7 @@
 ;
       --link-color-visited: #9ebccf;
   
-      --code-background: #f5f6f8;
+      /* --code-background: #f5f6f8;
       --code-accent-color: #e3e7eb;
       --code-accent-color-lite: #eff1f3;
       --code-font-color: #5f5f5f;
@@ -69,7 +69,7 @@
       --code-copy-background: #f8f9fa;
       --code-copy-font-color: #6b7784;
       --code-copy-border-color: #adb4bc;
-      --code-copy-success-color: #fffdf7;
+      --code-copy-success-color: #fffdf7; */
   
       --accent-color-dark: #868e96;
       --accent-color: #e9ecef;
@@ -100,7 +100,7 @@
   
     --link-color: #7ac29e;
     --link-color-visited: #c27a9e;
-  
+/*   
     --code-background: #f5f6f8;
     --code-accent-color: #262b2f;
     --code-accent-color-lite: #2b3035;
@@ -109,7 +109,7 @@
     --code-copy-background: #343a40;
     --code-copy-font-color: #6b7784;
     --code-copy-border-color: #6b7784;
-    --code-copy-success-color: #37905c;
+    --code-copy-success-color: #37905c; */
   
     --accent-color-dark: #222629;
     --accent-color: #2b3035;
@@ -138,7 +138,7 @@
       --link-color: #7ac29e;
       --link-color-visited: #c27a9e;
   
-      --code-background: #f5f6f8;
+      /* --code-background: #f5f6f8;
       --code-accent-color: #262b2f;
       --code-accent-color-lite: #2b3035;
       --code-font-color: #b9b9b9;
@@ -146,7 +146,7 @@
       --code-copy-background: #343a40;
       --code-copy-font-color: #6b7784;
       --code-copy-border-color: #6b7784;
-      --code-copy-success-color: #37905c;
+      --code-copy-success-color: #37905c; */
   
       --accent-color-dark: #222629;
       --accent-color: #2b3035;
