--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -31,5 +31,5 @@
       {{ partial "utils/content" . }}
     </section>
   </article>
-  <!-- {{ template "_internal/disqus.html" . }} -->
+  {{ template "_internal/disqus.html" . }}
 {{ end }}
