--- a/layouts/partials/head/favicons.html
+++ b/layouts/partials/head/favicons.html
@@ -3,7 +3,10 @@
 <link rel="apple-touch-icon" sizes="180x180" href="{{ "favicon/apple-touch-icon.png" | relURL }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ "favicon/favicon-32x32.png" | relURL }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ "favicon/favicon-16x16.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="192x192" href="{{ "favicon/android-chrome-192x192.png" | relURL }}">
+<link rel="icon" type="image/png" sizes="512x512" href="{{ "favicon/android-chrome-512x512.png" | relURL }}">
 <link rel="manifest" href="{{ "favicon/site.webmanifest" | relURL }}">
+<link rel="browserconfig" href="{{ "favicon/browserconfig.xml" | relURL }}">
 <link rel="mask-icon" href="{{ "favicon/safari-pinned-tab.svg" | relURL }}" color="#efefef">
 <meta name="msapplication-TileColor" content="#efefef">
 <meta name="theme-color" content="#efefef">
