--- a/layouts/partials/head/favicons.html
+++ b/layouts/partials/head/favicons.html
@@ -7,6 +7,6 @@
 <link rel="icon" type="image/png" sizes="512x512" href="{{ "favicon/android-chrome-512x512.png" | relURL }}">
 <link rel="manifest" href="{{ "favicon/site.webmanifest" | relURL }}">
 <link rel="browserconfig" href="{{ "favicon/browserconfig.xml" | relURL }}">
-<link rel="mask-icon" href="{{ "favicon/safari-pinned-tab.svg" | relURL }}" color="#efefef">
-<meta name="msapplication-TileColor" content="#efefef">
+<link rel="mask-icon" href="{{ "favicon/safari-pinned-tab.svg" | relURL }}" color="#16537e">
+<meta name="msapplication-TileColor" content="#16537e">
 <meta name="theme-color" content="#efefef">
