--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -1,2 +1,3 @@
 <!-- You can add custom elements to the page header here. -->
 {{ template "_internal/google_analytics.html" . }}
+{{ template "_internal/google_analytics_async.html" . }}
